[package]
name = "gql"
version = "0.1.0"
authors = ["Robert Lord <robert@lord.io>"]
description = "A GraphQL lexer (and future parser)"
repository = "https://github.com/lord/gql"
readme = "readme.md"
license = "MIT"

[dependencies]
regex = "^0.1.77"

  [dependencies.nom]
  version = "^1.2.4"
  features = ["regexp"]
